# objexp

./: .gitignore  LICENSE.txt  README.md  about.rst  objexp.json  objexp.md  pyproject.toml  pyproject.toml.bak  readme.rst  setup.cfg.bak  setup.py  setuptools.md  todo.md  todo.txt  tool_backup.ps1
bak/aiinfo/: 20250623_dirlike.md
bak/code/1/: objxp_init_20250530.py  objxp_init_20250607-1.py  objxp_init_20250607-2.py  objxp_init_20250607-3.py  objxp_init_20250607.py
bak/code/2/: objxp_init_20250608-1.py  objxp_init_20250608-2.py  objxp_init_20250608-4.py  objxp_init_20250608-5.py
objexp/: __init__.py
src/objexp/: __init__.py  __main__.py
src/objexp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/objxp/: __init__.py
test/: import_parent.py  installed.py  magic_thing.txt  test.py
tests/: dev.py  test.py  test_ox.py
