[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "objexp"
version = "1.0.0"
description = "List the members in a Object[also Class or Module]."
readme = "README.md"
authors = [{ name = "Luke Lin", email = "luke.l.lin@hotmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    Development Status :: 4 - Beta,
    Environment :: Win32 (MS Windows),
    Environment :: Console,
    Natural Language :: Chinese (Simplified),
    Natural Language :: English,
    Topic :: Software Development :: Documentation,
]
keywords = ["dir", "vars", "debug"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/sunrenn/objexp"
