[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "objxp"
version = "1"
description = "List the members in a Object[also Class or Module]."
readme = "README.md"
authors = [{ name = "lukelin", email = "hongfoo@foxmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Environment :: Console",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Topic :: Software Development :: Documentation",
]
keywords = ["dir", "vars", "debug"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/sunrenn/objxp"

[project.scripts]
tstox = "objxp.__main__:main"